# emotions-detecto

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  config.yaml  config_transfer.yaml  data.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
notebooks/: 00_mnist.ipynb  01_eda.ipynb  02_eda_class_distribution.ipynb  03_eda_image_grids_intensity.ipynb  04_eda_duplicates_label_noise.ipynb  05_clean_validation.ipynb  06_fe_validation.ipynb  07_pca_decomposition.ipynb  08_final_sanity_check.ipynb  09_mnist_logreg.ipynb  10_mnist_cnn.ipynb
planning/: create_github_issues.py
planning/issues/: 00-INDEX.md  01-project-scaffolding.md  02-poetry-virtualenv.md  03-dependencies-requirements.md  04-config-yaml-loader.md  05-seeding-dispatch-toggles.md  06-loguru-logging.md  07-abstract-base-classes.md  08-download-dataset.md  09-load-parse-pixels.md  10-data-md-section1.md  11-eda-basic-inspection.md  12-eda-class-distribution.md  (+49 more)
scripts/: adversarial.py  dashboard.py  download_face_model.py  finalize_model.py  optimize.py  predict.py  predict_live_stream.py  preprocess.py  train.py  tune.py  validation_loss_accuracy.py
tests/: test_ablation_contract.py  test_adversarial.py  test_augmentation.py  test_bases.py  test_blocks.py  test_builders.py  test_callbacks.py  test_capture.py  test_classifier.py  test_cleaning.py  test_compile.py  test_config.py  test_config_writer.py  test_cross_val.py  test_curves.py  test_dashboard.py  test_decomposition.py  test_dispatch.py  test_dnn.py  test_download.py  test_equalization.py  test_evaluation.py  test_factory.py  test_fer2013.py  test_finalize.py  test_haar.py  test_imbalance.py  test_labels.py  test_logging.py  test_optimize.py  test_overlay.py  test_pipeline.py  test_predict.py  test_predict_live_stream.py  test_preprocess.py  test_preprocessing.py  test_preprocessing_test.py  test_seeding.py  test_splits.py  test_stream.py  (+5 more)
(+58 files in other folders)
