[project]
name = "emotions-detector"
version = "0.1.0"
description = ""
authors = [
    {name = "mahdikheirkhah",email = "mohammad.kheirkhah@gritlab.ax"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
