[project]
name = "emotions-detector"
version = "0.1.0"
description = "Real-time facial emotion detection — CNN on FER-2013"
authors = [
    {name = "mahdikheirkhah", email = "mohammad.kheirkhah@gritlab.ax"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.poetry]
package-mode = false

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"